--- a/css/style.css
+++ b/css/style.css
@@ -656,7 +656,7 @@ li>a:only-child:after {
 
 /* background images for banner */
 .banner-w3pvt-1 {
-    background: url(../images/banner1.jpeg) no-repeat top;
+    background: url(../images/banner1.jpg) no-repeat top;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
