--- a/css/style.css
+++ b/css/style.css
@@ -2643,3 +2643,12 @@ footer {
 .comp{
     padding: 0px 35px;
 }
+.medo{
+    padding: 14px 11px ;
+}
+.mezo{
+    padding: 0px 35px;
+}
+.center{
+    padding: 0px 20px;
+}
